feat: added a parser

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,1 +1,3 @@
-cchell_source = files('diagnostic.cc', 'lexer.cc', 'main.cc', 'parser.cc')
+subdir('parser')
+
+cchell_source = files('diagnostic.cc', 'lexer.cc', 'main.cc', 'parser.cc') + cchell_parser_source
