--- a/src/meson.build
+++ b/src/meson.build
@@ -1,3 +1,3 @@
 subdir('parser')
 
-cchell_source = files('diagnostic.cc', 'lexer.cc', 'main.cc', 'parser.cc') + cchell_parser_source
+cchell_source = files('diagnostic.cc', 'lexer.cc', 'main.cc', 'parser.cc', 'shared.cc') + cchell_parser_source
