--- a/src/parser/meson.build
+++ b/src/parser/meson.build
@@ -1,1 +1,1 @@
-cchell_parser_source = files('assignment.cc', 'command.cc', 'option.cc')
+cchell_parser_source = files('assignment.cc', 'command.cc', 'option.cc', 'string.cc')
