repo: added a README.md

--- a/src/parser/meson.build
+++ b/src/parser/meson.build
@@ -1,1 +1,4 @@
-cchell_parser_source = files('assignment.cc', 'command.cc', 'option.cc', 'string.cc')
+cchell_parser_source = files('assignment.cc',
+                             'command.cc',
+                             'option.cc',
+                             'string.cc')
