chore: added some more interface in preperation of implementing input logic

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,11 +1,12 @@
+subdir('input')
 subdir('parser')
 
 cchell_source = files('diagnostics.cc',
-                      'input.cc',
                       'interaction.cc',
                       'interpreter.cc',
                       'lexer.cc',
                       'main.cc',
                       'parser.cc',
                       'shared.cc',
-                     ) + cchell_parser_source
+                      'terminal.cc',
+                     ) + cchell_input_source + cchell_parser_source
